[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Character/Character.gd" type="Script" id=1]

[sub_resource type="CompressedTexture2D" id=4]
flags = 4
load_path = "res://.import/download (6) uspcale.png-c26826165d2150dcc326f9924e33ad4c.stex"

[sub_resource type="CircleShape2D" id=5]
radius = 24.0

[node name="Character" type="CharacterBody2D"]
script = ExtResource( 1 )

[node name="CharacterSprite" type="Sprite2D" parent="."]
position = Vector2( 6, -126 )
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 4 )

[node name="CharacterCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="CharacterNavAgent" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[connection signal="navigation_finished" from="CharacterNavAgent" to="." method="_on_CharacterNavAgent_navigation_finished"]
[connection signal="target_reached" from="CharacterNavAgent" to="." method="_on_CharacterNavAgent_target_reached"]
[connection signal="velocity_computed" from="CharacterNavAgent" to="." method="_on_CharacterNavAgent_velocity_computed"]
